# API-TCC

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: api.py
app/ahp/: ahp_method.py  exemplo_funcional.py  matriz_comparacao.py  user_criterios.py
app/connections/: arangodb.py
app/models/: criterios.py  feedbacks.py  notificacoes.py  objetivos.py  objetivos_users.py  objetivos_usuario.py  recuperacao_senha.py  user_criterios.py  users.py  users_amigos.py  users_model.py
app/routes/: auth.py  criterios.py  evolucao.py  feedbacks.py  info.py  login.py  notiticacoes.py  objetivos.py  recuperacao_senha.py  user_amigos.py  user_criterios.py  users.py
app/services/: ahp.py  evolucoes.py  jwt_manager.py  login.py  register.py
app/utils/: credentials.py  errors.py  utils.py
app/validatores/: token_validator.py
populate/: populate_user.py
tests/: criterios.py  feedbacks.py  notificacoes.py  objetivos.py  objetivos_users.py  users.py  users_amigos.py
tests/services/: login.py  register.py
tests/shared/: create_tests.py
